getting remote stuff to work, working on scheduled jobs

--- a/app/views/commands/_form.html.erb
+++ b/app/views/commands/_form.html.erb
@@ -18,9 +18,10 @@
   <div class="field">
     <%= f.label :notes %><br>
     <%= f.text_area :notes %>
-  </div>
+</div>
   <div class="field">
-    <%= f.label :data %><br>
+    <%= f.label :data %>
+<p>"%%%" will be substituted for the job arguments</p>
     <%= f.text_area :data %>
   </div>
   <div class="field">
