--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,30 +1,29 @@
-<h1>Listing schedules</h1>
+<h1>Daily Schedules</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Screen</th>
       <th>Command</th>
       <th>Arguments</th>
       <th>User</th>
-      <th>Offset</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>Time</th>
+      <th>Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @schedules.each do |schedule| %>
       <tr>
-        <td><%= schedule.screen_id %></td>
-        <td><%= schedule.command_id %></td>
+        <td><%= link_to schedule.screen.name, schedule.screen %></td>
+        <td><%= link_to schedule.command.name, schedule.command %></td>
         <td><%= schedule.arguments %></td>
-        <td><%= schedule.user_id %></td>
-        <td><%= schedule.offset %></td>
-        <td><%= link_to 'Show', schedule %></td>
-        <td><%= link_to 'Edit', edit_schedule_path(schedule) %></td>
-        <td><%= link_to 'Destroy', schedule, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to schedule.user.name, schedule.user %></td>
+        <td><%= schedule.offset_str %>(<%= schedule.offset %>)</td>
+        <td>
+            <%= link_to 'Edit', edit_schedule_path(schedule), :class => 'btn btn-info btn-mini'%>
+            <%= link_to 'Destroy', schedule, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-warning btn-mini' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +31,4 @@
 
 <br>
 
-<%= link_to 'New Schedule', new_schedule_path %>
+<%= link_to 'New Scheduled Job', new_schedule_path, :class => 'btn btn-primary' %>
