--- a/app/views/screens/show.html.erb
+++ b/app/views/screens/show.html.erb
@@ -7,6 +7,37 @@
 <h3>Available Commands</h3>
 <%= pills_for @screen.commands %>
 
-<%= link_to 'Jobs', screen_jobs_path(@screen), :class => 'btn btn-primary' %>
+<h3>Jobs</h3>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Target Run Time<br/><%= nice_datetime Time.zone.now %></th>
+      <th>Command</th>
+      <th>Arguments</th>
+      <th>User</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @screen.jobs.each do |job| %>
+        <tr<%= job.old? ? ' class="old_job" '.html_safe : ""%>>
+        <td><%= nice_datetime job.target %> <%= i('star') if job.removable %></td>
+        <td><%= link_to job.command.name, job.command %></td>
+        <td><%= job.arguments %></td>
+        <td><%= link_to job.user.name, job.user %></td>
+        <td>
+            <%= link_to "Edit", edit_screen_job_path(@screen, job), :class => 'btn btn-mini btn-info' %>
+            <%= link_to "Cancel", job, :method => 'delete', :class => 'btn btn-mini btn-warning', :confirm => 'Really cancel job?' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+<%= link_to 'New Job', new_screen_job_path(@screen), :class => 'btn btn-primary' %>
+<%= link_to 'Ping', ping_screen_path(@screen), :class => 'btn btn-success' %>
 <%= link_to 'Edit', edit_screen_path(@screen), :class => 'btn btn-info' %>
 <%= link_to 'Delete', screen_path(@screen), :method => 'delete', :class => 'btn btn-warning', :confirm => "Really delete #{@screen.name}?" %>
