--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
                                 <li><%= link_to "Users", users_path %></li>
                                 <li><%= link_to "Groups", groups_path %></li>
                             <% end %>
+                            <% if current_user %>
+                                <li><%= link_to "Sign Out", sign_out_path %></li>
+                            <% end %>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
