--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <%= link_to "Projectionist", root_path, :class => 'brand' %>
-                    <div class="nav-collapse collapse">
+                    <div class="nav-collapse">
                         <ul class="nav">
                             <% if current_user %>
                                 <li><%= link_to "Screens", screens_path %></li>
